relax requirements to defaults

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
 autopep8
 ipython
-notebook==6.5.5
+notebook
 jupyter
 jupyter_contrib_nbextensions
 matplotlib
 numpy
-pytest>=4.6
+pytest
 pytest-cov
 nbconvert
 nbformat
 scipy
 scikit-learn
-setuptools>=41.0.0
-six>=1.12.0
+setuptools
+six
 sphinx
 sympy
-control==0.8.3
+control
 yapf
-pylint==2.4.4
+pylint
 flake8
 tensorflow
